atualização: js integrado ao button do index.html

--- a/portifoliotrybe/index.html
+++ b/portifoliotrybe/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="lista">
         <ul>
-            <li>HABILIDADE1</li>
+            <li>HABILIDADE1 <button><link rel="stylesheet" href="https://www.google.com/" target="_blank"> HABILIDADE</button></li>
             <li>HABILIDADE2</li>
             <li>HABILIDADE3</li>
             <li>HABILIDADE4</li>
@@ -33,9 +33,9 @@
     <div class="curiosidades">
         <h3>Meu filme favorito:</h3><br>
        <p>Tropa de Elite</p>
-        <button><link rel="stylesheet" href="https://www.palestraspimentel.com/blog/licoes-lideranca-filme-tropa-de-elite/">ACESSE AQUI</button>
+        <button id="butao">ACESSE AQUI</button>
     </div>
 
-    
+    <script src="main.js"></script>
 </body>
 </html>
