--- a/exerc18-12/index.html
+++ b/exerc18-12/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Cores</title>
 </head>
 <body>
@@ -19,37 +20,5 @@
             <li>Marrom</li>
         </div>
     </ul>
-    <style>
-        h1{
-            font-family: sans-serif;
-            line-height: 16px;
-            
-        }
-        p{
-            font-weight: 600;
-        }
-        body{
-            font-size: 16px;
-        }
-        p{
-            font-size: 3em;
-        }
-        li{
-            font-size: 16px;
-            line-height: 48px;
-            text-align:center;
-            font-style: italic;
-            text-decoration: underline;
-        }
-        .amarelo{
-            background-color: yellow;
-        }
-        .vermelho{
-            background-color: red;
-        }
-        .marrom{
-            background-color: brown;
-        }
-    </style>
 </body>
 </html>
