Portifólio com foto real do usuario / usando conceitos de flex-box e grid CSS

--- a/portifoliotrybe/index.html
+++ b/portifoliotrybe/index.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Portifólio</title>
 </head>
 <body>
-    <span class="bio">
+    <div class="bio">
         <h1>Socram Desenvolvedor Web</h1>
+    <span class="information">
         <p>Developer: Marcos L. Monteiro</p><br>
         <p>Nacionalidade: Brasileiro</p><br>
         <p>Lugar: Guapimirim-RJ</p>
-        <img src="./capitao.jpg" alt="capitão socram">
-        <img src="https://g1.globo.com/Noticias/Cinema/foto/0,,12289302-EX,00.jpg" alt="bopeporra">
     </span>
+    <span class="photo">
+        <img src="./socram.png" alt="eosocram">
+    </span>           
+    </div>
     <div class="description">
         <h3>Descrição:</h3><br>
         <p>Desde criança, sempre enxerguei o mundo como um campo fértil para minha criatividade. 
@@ -23,7 +27,7 @@
     </div>
     <div class="lista">
         <ul>
-            <li>HABILIDADE1 <button><link rel="stylesheet" href="https://www.google.com/" target="_blank"> HABILIDADE</button></li>
+            <li><button>HABILIDADE1</button></li>
             <li>HABILIDADE2</li>
             <li>HABILIDADE3</li>
             <li>HABILIDADE4</li>
